--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="user_header" >
+    <% if current_user%>
+      Logged in as <%= current_user.user_name %>.
+      <%= link_to "Sign Out", logout_path %>
+    <%else %>
+      <%= link_to "Sign Up", signup_path %>
+      <%= link_to "Sign In", login_path %>
+    <%end %>
+  </div>
+
+<% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, id: "flash_#{name}" %>
+<%end %>
 
 <%= yield %>
 
